--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- <meta http-equiv="refresh" content="3;url=https://atmikvirani.github.io/portfolio/" /> -->
+<meta http-equiv="refresh" content="5;url=https://atmikvirani.github.io/portfolio/" />
 
 <head>
   <meta name="google-site-verification" content="2mPAJkNOYTSAkePoh1OkdBNsALM9Ep9UvaxvJ4OmU1I" />
